Fixed h1 on small screens

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -35,7 +35,7 @@
     transform: translate3d(100%, 0, 0);
 
     .portrait {
-      background: url('../img/portrait_small.jpg') no-repeat;
+      background: url('../img/portraitsmall.jpg') no-repeat;
       width: 150px;
       height: 150px;
     }
@@ -45,5 +45,6 @@
 @include mediaSm {
   main#home h1 {
     margin-top: 10vh;
+    font-size: 4.5rem;
   }
 }
